[gd_scene load_steps=15 format=3 uid="uid://dvupypa23pjdl"]

[ext_resource type="Script" uid="uid://b082ygwuo1n4r" path="res://Scripts/ButtonHandler.gd" id="1_2bfgj"]
[ext_resource type="Texture2D" uid="uid://b7qd3fxynyhtt" path="res://Assets/menuBackground.png" id="2_dwew8"]
[ext_resource type="Texture2D" uid="uid://bhuovifrd0dy8" path="res://Assets/exitButton.png" id="3_htkpg"]
[ext_resource type="Texture2D" uid="uid://ds7f46kqikmru" path="res://Assets/movesButton.png" id="3_o67ut"]
[ext_resource type="Texture2D" uid="uid://btiixs7ndp765" path="res://Assets/playButton.png" id="4_o67ut"]
[ext_resource type="AudioStream" uid="uid://5iyl4whkkyej" path="res://Assets/buttonSound.mp3" id="4_t1ll0"]
[ext_resource type="Texture2D" uid="uid://dwl5ac8rrhlqd" path="res://Assets/backButton.png" id="6_bwjwd"]
[ext_resource type="Texture2D" uid="uid://qmdebjh4skh2" path="res://Assets/sallyWhoHeadshot.png" id="7_2t5dp"]
[ext_resource type="Texture2D" uid="uid://br8udyuu1kdpk" path="res://Assets/fightButton.png" id="7_x0lde"]
[ext_resource type="Texture2D" uid="uid://bv7ixtjf48fnr" path="res://Assets/sallyWhoButton.png" id="8_0qg22"]
[ext_resource type="Texture2D" uid="uid://bc21dbv2pfwud" path="res://Assets/GrinchIcon.png" id="8_3dxrn"]
[ext_resource type="AudioStream" uid="uid://dejed5p2vi7bq" path="res://Assets/fightButtonSound.mp3" id="9_bkkru"]
[ext_resource type="Texture2D" uid="uid://8lg6cwroumrc" path="res://Assets/grinchButton.png" id="9_ngidu"]
[ext_resource type="AudioStream" uid="uid://b8s7xhy4ftfun" path="res://Assets/You're a Mean One, Mr Grinch Dr Seuss.mp3" id="10_ngidu"]

[node name="Node2D" type="Node2D"]

[node name="UI" type="Node2D" parent="."]
script = ExtResource("1_2bfgj")

[node name="Sprite2D" type="Sprite2D" parent="UI"]
position = Vector2(-0.499965, 0.999995)
scale = Vector2(0.563965, 0.317383)
texture = ExtResource("2_dwew8")

[node name="MainMenu" type="Node2D" parent="UI"]

[node name="MovesButton" type="Button" parent="UI/MainMenu"]
offset_left = -198.0
offset_top = -19.0
offset_right = 194.0
offset_bottom = 70.0
mouse_default_cursor_shape = 2
text = "Moves"

[node name="Sprite2D" type="Sprite2D" parent="UI/MainMenu/MovesButton"]
position = Vector2(186, 69)
scale = Vector2(0.233887, 0.131592)
texture = ExtResource("3_o67ut")

[node name="buttonSoundPlayer" type="AudioStreamPlayer2D" parent="UI/MainMenu/MovesButton"]
stream = ExtResource("4_t1ll0")

[node name="ExitButton" type="Button" parent="UI/MainMenu"]
offset_left = -199.0
offset_top = 113.0
offset_right = 196.0
offset_bottom = 211.0
mouse_default_cursor_shape = 2
text = "Exit"

[node name="Sprite2D" type="Sprite2D" parent="UI/MainMenu/ExitButton"]
position = Vector2(186, 82)
scale = Vector2(0.236816, 0.137695)
texture = ExtResource("3_htkpg")

[node name="buttonSoundPlayer" type="AudioStreamPlayer2D" parent="UI/MainMenu/ExitButton"]
stream = ExtResource("4_t1ll0")

[node name="PlayButton" type="Button" parent="UI/MainMenu"]
offset_left = -203.0
offset_top = -168.0
offset_right = 192.0
offset_bottom = -70.0
mouse_default_cursor_shape = 2
text = "
"

[node name="Sprite2D" type="Sprite2D" parent="UI/MainMenu/PlayButton"]
position = Vector2(186, 79)
scale = Vector2(0.232422, 0.135742)
texture = ExtResource("4_o67ut")

[node name="buttonSoundPlayer" type="AudioStreamPlayer2D" parent="UI/MainMenu/PlayButton"]
stream = ExtResource("4_t1ll0")

[node name="CharacterSelect" type="Node2D" parent="UI"]
visible = false

[node name="SallyWho" type="Button" parent="UI/CharacterSelect"]
offset_left = 41.0
offset_top = -172.0
offset_right = 200.0
offset_bottom = 99.0
mouse_default_cursor_shape = 2
text = "Sally Who
"

[node name="Sprite2D" type="Sprite2D" parent="UI/CharacterSelect/SallyWho"]
position = Vector2(81, 136)
scale = Vector2(0.242075, 0.338272)
texture = ExtResource("7_2t5dp")

[node name="Grinch" type="Button" parent="UI/CharacterSelect"]
offset_left = -188.0
offset_top = -173.0
offset_right = -29.0
offset_bottom = 98.0
mouse_default_cursor_shape = 2
text = "The Grinch
"

[node name="Sprite2D" type="Sprite2D" parent="UI/CharacterSelect/Grinch"]
position = Vector2(97.25, 116)
scale = Vector2(1.9125, 2.388)
texture = ExtResource("8_3dxrn")

[node name="BackButton" type="Button" parent="UI/CharacterSelect"]
offset_left = -196.0
offset_top = 160.0
offset_right = 199.0
offset_bottom = 258.0
mouse_default_cursor_shape = 2
text = "Back
"

[node name="Sprite2D" type="Sprite2D" parent="UI/CharacterSelect/BackButton"]
position = Vector2(189, 95)
scale = Vector2(0.251953, 0.168701)
texture = ExtResource("6_bwjwd")

[node name="buttonSoundPlayer" type="AudioStreamPlayer2D" parent="UI/CharacterSelect/BackButton"]
stream = ExtResource("4_t1ll0")

[node name="FightButton" type="Button" parent="UI/CharacterSelect"]
offset_left = -194.0
offset_top = -294.0
offset_right = 201.0
offset_bottom = -196.0
mouse_default_cursor_shape = 2
text = "FIGHT
"

[node name="Sprite2D" type="Sprite2D" parent="UI/CharacterSelect/FightButton"]
position = Vector2(187, 77)
scale = Vector2(0.255371, 0.133057)
texture = ExtResource("7_x0lde")

[node name="buttonSoundPlayer" type="AudioStreamPlayer2D" parent="UI/CharacterSelect/FightButton"]
stream = ExtResource("9_bkkru")

[node name="SelectionLabel" type="Label" parent="UI/CharacterSelect"]
offset_left = -250.0
offset_top = -420.0
offset_right = 250.0
offset_bottom = -340.0
text = "Player 1: Pick your character!"
horizontal_alignment = 1

[node name="PostGame" type="Node2D" parent="UI"]
visible = false

[node name="ReplayButton" type="Button" parent="UI/PostGame"]
offset_left = 92.0
offset_top = -96.0
offset_right = 487.0
offset_bottom = 2.0
mouse_default_cursor_shape = 2
text = "Replay
"

[node name="ExitToMainMenuButton" type="Button" parent="UI/PostGame"]
offset_left = 93.0
offset_top = 41.0
offset_right = 488.0
offset_bottom = 139.0
mouse_default_cursor_shape = 2
text = "Exit to Main Menu"

[node name="Controlls" type="Node2D" parent="UI"]
visible = false

[node name="SallyWho" type="Button" parent="UI/Controlls"]
offset_left = 41.0
offset_top = -172.0
offset_right = 200.0
offset_bottom = 99.0
mouse_default_cursor_shape = 2
text = "Sally Who
"

[node name="Sprite2D" type="Sprite2D" parent="UI/Controlls/SallyWho"]
position = Vector2(92.5, 96)
scale = Vector2(0.200684, 0.221313)
texture = ExtResource("8_0qg22")

[node name="buttonSoundPlayer" type="AudioStreamPlayer2D" parent="UI/Controlls/SallyWho"]
stream = ExtResource("4_t1ll0")

[node name="BackButton" type="Button" parent="UI/Controlls"]
offset_left = -196.0
offset_top = 160.0
offset_right = 199.0
offset_bottom = 258.0
mouse_default_cursor_shape = 2
text = "Back
"

[node name="Sprite2D" type="Sprite2D" parent="UI/Controlls/BackButton"]
position = Vector2(185, 79.5625)
scale = Vector2(0.230103, 0.143127)
texture = ExtResource("6_bwjwd")

[node name="buttonSoundPlayer" type="AudioStreamPlayer2D" parent="UI/Controlls/BackButton"]
stream = ExtResource("4_t1ll0")

[node name="Grinch" type="Button" parent="UI/Controlls"]
offset_left = -188.0
offset_top = -173.0
offset_right = -29.0
offset_bottom = 98.0
mouse_default_cursor_shape = 2
text = "The Grinch
"

[node name="Sprite2D" type="Sprite2D" parent="UI/Controlls/Grinch"]
position = Vector2(83, 68)
scale = Vector2(0.193359, 0.255859)
texture = ExtResource("9_ngidu")

[node name="buttonSoundPlayer" type="AudioStreamPlayer2D" parent="UI/Controlls/Grinch"]
stream = ExtResource("4_t1ll0")

[node name="GrinchControlls" type="Node2D" parent="UI"]
visible = false

[node name="BackButton" type="Button" parent="UI/GrinchControlls"]
offset_left = -196.0
offset_top = 160.0
offset_right = 199.0
offset_bottom = 258.0
mouse_default_cursor_shape = 2
text = "Back
"

[node name="Sprite2D" type="Sprite2D" parent="UI/GrinchControlls/BackButton"]
position = Vector2(185.25, 86)
scale = Vector2(0.233154, 0.178955)
texture = ExtResource("6_bwjwd")

[node name="buttonSoundPlayer" type="AudioStreamPlayer2D" parent="UI/GrinchControlls/BackButton"]
stream = ExtResource("4_t1ll0")

[node name="RichTextLabel" type="RichTextLabel" parent="UI/GrinchControlls"]
offset_left = -56.0
offset_top = -275.0
offset_right = 295.0
offset_bottom = -212.0
text = "Grinch Controlls"

[node name="SallyControlls" type="Node2D" parent="UI"]
visible = false

[node name="BackButton" type="Button" parent="UI/SallyControlls"]
offset_left = -196.0
offset_top = 160.0
offset_right = 199.0
offset_bottom = 258.0
mouse_default_cursor_shape = 2
text = "Back
"

[node name="Sprite2D" type="Sprite2D" parent="UI/SallyControlls/BackButton"]
position = Vector2(185, 85)
scale = Vector2(0.246094, 0.168457)
texture = ExtResource("6_bwjwd")

[node name="buttonSoundPlayer" type="AudioStreamPlayer2D" parent="UI/SallyControlls/BackButton"]
stream = ExtResource("4_t1ll0")

[node name="RichTextLabel" type="RichTextLabel" parent="UI/SallyControlls"]
offset_left = -56.0
offset_top = -275.0
offset_right = 295.0
offset_bottom = -212.0
text = "Sally Who Controlls"

[node name="SongPlayer" type="AudioStreamPlayer2D" parent="UI"]
stream = ExtResource("10_ngidu")
volume_db = -17.64
autoplay = true
parameters/looping = true

[node name="Camera2D" type="Camera2D" parent="."]
